[package]
name = "bilibilicomic-download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"

pretty_env_logger = "0.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures = "0.3.19"
tokio = { version = "1", features = ["full"] }

indicatif = { git = "https://github.com/console-rs/indicatif" }

zip = "0.5.13"

clap = { version = "3.0.10", features = ["derive"] }
